fix overflowing bug

--- a/src/styles/components/pages/Dashboard/Overview.module.scss
+++ b/src/styles/components/pages/Dashboard/Overview.module.scss
@@ -3,7 +3,6 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1em;
-	height: 100%;
 	max-height: 22.25rem;
 	header {
 		display: flex;
@@ -70,5 +69,8 @@
 				}
 			}
 		}
+	}
+	@media screen and (min-width: $size-tablet-xs) {
+		height: 100%;
 	}
 }
